--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center"
                 android:text="@string/app_name_ex"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
-                android:textColor="?android:attr/titleTextColor"
+                android:textAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
+                android:theme="@style/AppTheme.Dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -60,18 +60,18 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="73dp"
-        android:clickable="true"
-        android:onClick="onClickGuess"
-        android:visibility="gone"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/baseline_add_black_48"
-        android:focusable="true" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="73dp"-->
+        <!--android:clickable="true"-->
+        <!--android:onClick="onClickGuess"-->
+        <!--android:visibility="gone"-->
+        <!--app:fabSize="normal"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:srcCompat="@drawable/baseline_add_black_48"-->
+        <!--android:focusable="true" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
