--- a/app/src/main/res/layout/fragment_query_thumb.xml
+++ b/app/src/main/res/layout/fragment_query_thumb.xml
@@ -58,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/edit_query_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/edit_query_iw3"
             app:layout_constraintTop_toBottomOf="@+id/edit_query_iw2"
@@ -67,16 +68,25 @@
             android:id="@+id/edit_query_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="?attr/colorButtonNormal"
+            android:background="@color/colorQueryThumbTitle"
             android:padding="4dp"
             android:textAlignment="viewStart"
             android:textAppearance="@android:style/TextAppearance.Material.Menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_query_iw3"
             tools:text="Query Title" />
+
+        <ProgressBar
+            android:id="@+id/edit_query_pb"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/edit_query_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
