--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -14,6 +14,7 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/AppThemeDark"
+        android:transitionName="TB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,17 +22,29 @@
         app:titleTextColor="@android:color/primary_text_dark"
         tools:title="Query Value" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/results_rw"
+    <android.support.v7.widget.CardView
+        android:id="@+id/results_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:transitionName="CONTENT"
+        app:cardBackgroundColor="@color/colorQueryThumbTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/results_tb"
-        tools:listitem="@layout/fragment_query_item" >
+        app:layout_constraintTop_toBottomOf="@+id/results_tb">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/results_rw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/results_tb"
+            tools:listitem="@layout/fragment_query_item">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.CardView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/results_fab"
