--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#1565c0</color>
     <color name="colorPrimaryDark">#003c8f</color>
     <color name="colorAccent">#8bc34a</color>
-    <color name="colorQueryThumbTitle">#F4F4F4</color>
+    <color name="colorQueryThumbTitle">#E0E0E0</color>
 </resources>
